--- a/widget/static/css/camera.css
+++ b/widget/static/css/camera.css
@@ -1,10 +1,16 @@
 *,body {
       margin: 0px;
       padding: 0px;
+      overflow: hidden;
+      height: 100%;
+      width: 100%;
     }
 
     body {
       margin: 0px;
+      padding: 0px;
+      height: 100%;
+      width: 100%;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 14px;
       line-height: 20px;
